fix: Resolve 6 pre-release blockers (B1-B6) + harden JDI error handling
B1: Deferred line breakpoints now auto-bind on ClassPrepareEvent
    via sourceName() + simple-name heuristic (was silently broken).
B2: catch-exception semantics corrected — notifyCaught/notifyUncaught
    exposed as --caught/--uncaught flags; IDs tracked for removal.
B3: inspect --max-depth N now recurses with cycle guard; nested map
    populated in response (was unused param, feature silently no-op'd).
B4: detach auto-runs 'am clear-debug-app' for launch sessions so the
    app doesn't hang on next normal launch.
B5: Deferred watchpoints use per-class list instead of single Pair;
    multiple watchpoints per class no longer overwrite.
B6: Added remove-break, remove-catch-exception, remove-watch commands;
    all JDI requests tracked and deletable; orphaned ClassPrepareRequest
    auto-disabled when deferral queue empties.

Additional hardening discovered during live emulator integration:
- Catch Throwable in event listener loop (ART's SourceDebugExtension
  parser throws InternalError, which killed the listener thread and
  left the app suspended forever).
- Add safeSourceName() helper for all event handlers.
- Fix Clikt flag syntax for --no-access/--no-modify/--no-caught/--no-uncaught.
- Harden bindBreakpointLocation class-matching filter to catch all
  Throwable (not just AbsentInformationException).

Tests: 10 new test cases added (B1-B6 coverage in core module).
Docs: SKILL.md rewritten for accuracy + agent-efficiency; README.md
      command names corrected; BLOCKERS.md tracks remaining issues.

Verified end-to-end against sample app on emulator: deferred breakpoint
auto-bind, set-var mutation propagating to UI, deep inspect --max-depth 2,
watchpoint --no-modify, all removal commands, detach auto-cleanup.